# DIL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Program.cs  README.md  main.cpp  main.odin
client/: Cargo.toml  connection.odin  draw_box.odin  drawing.odin  main.odin  state.odin
server/: Cargo.toml  main.odin
src/: Theme.cs  app.rs  completed_panel.rs  description_panel.rs  guard.rs  main.rs  panel_state.rs  task.rs  task_panel.rs  task_storage.rs
